# volume_render

./: .gitignore  CMakeLists.txt  Camera.h  Makefile  README.md  SceneRenderer.java  brain.txt  camera.h  glad.c  main  main.cpp  shader.fs  shader.vs  skullgaps.txt
resources/shaders/: shader.fs
src/: Shader.h  main.cpp
